Cambios para sonar